fix: calendar clean code and add more spacing to socials

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -52,7 +52,7 @@
     @apply inline-block h-6 w-6 fill-skin-base group-hover:fill-skin-accent;
   }
   svg.icon-tabler {
-    @apply inline-block h-6 w-6 scale-125 fill-transparent 
+    @apply inline-block h-6 w-6 mx-3 scale-125 fill-transparent 
     stroke-current stroke-2 opacity-90 group-hover:fill-transparent 
     sm:scale-110;
   }
